--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="5OAFH3DZbrg83StWucNnuHMkvLTn1VWLyve_YnpHuls"
+    />
     <title>Repeddle</title>
   </head>
   <body>
