--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,6 +13,7 @@
   <body>
     <div id="root"></div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://www.payfast.co.za/onsite/engine.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
